# rocket-practice

./: Cargo.toml  Rocket.toml
src/: main.rs
web/: index.html
web/static/style/: style.css
