[package]
name = "rocket-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "a298f84" }
figment = { version = "0.10", features = ["env", "toml", "json"] }